--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 
 body{
-    background-color: #490085;
+    background-color: #a55ee8;
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 20px;
@@ -58,7 +58,14 @@ nav {
     font-size: 2em;
     margin-top: 0;
     margin-bottom: 40px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    
+}
+
+#about img {
+    width: 200px;
+    height: auto;
+    border-radius: 50%;
+    margin-bottom: 20px;
 }
 
 #Education{
@@ -123,4 +130,121 @@ nav {
     font-size: 1.5em;
     margin-top: 20px;
     margin-bottom: 40px; 
+}
+
+#Extracurriculars h2 {
+    text-align: center;
+    color: #000000;
+    font-family: "Nunito", sans-serif;
+    font-size: 2em;
+    margin-bottom: 20px;
+}
+
+#Extracurriculars {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 10px;
+    padding: 20px;
+    background-color: #ffffff;
+    color: #000000;
+    font-family: "Nunito", sans-serif;
+    font-size: 1.5em;
+    margin-top: 20px;
+    margin-bottom: 40px; 
+}
+
+#Accomplishments {
+  padding: 40px 20px;
+}
+
+#Accomplishments h2 {
+    border-radius: 10px;
+    padding: 20px;
+    background-color: #ffffff;
+    text-align: center;
+    font-family: "Nunito", sans-serif;
+    font-size: 2em;
+    margin-bottom: 30px;
+}
+
+.accomplishments-container {
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.accomplishment-card {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  background-color: #ffffff;
+  color:#000000;
+  font-family: "Nunito", sans-serif;
+  font-size: 1.5em;
+  padding: 15px 20px;
+  border-radius: 10px;
+  width: 360px;
+}
+
+.accomplishment-card img {
+  width: 70px;
+  height: auto;
+}
+
+#Hobbies {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 10px;
+    padding: 20px;
+    background-color: #ffffff;
+    color: #000000;
+    font-family: "Nunito", sans-serif;
+    font-size: 1.5em;
+    margin-top: 20px;
+    margin-bottom: 40px; 
+}
+
+#contact {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 10px;
+    padding: 20px;
+    background-color: #ffffff;
+    color: #000000;
+    font-family: "Nunito", sans-serif;
+    font-size: 1.5em;
+    margin-top: 20px;
+    margin-bottom: 40px; 
+}
+
+#contact-form button {
+  padding: 10px;
+  background-color: #490085;
+  color: #fff;
+  border-radius: 6px;
+  font-size: 0.5em;
+}
+
+#contact-form input,
+#contact-form textarea {
+  padding: 7px;
+  font-size: 1em;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  font-family: "Nunito", sans-serif;
+}
+
+
+#Download {
+    background-color: #ffffff;
+    font-family: "Nunito", sans-serif;
+    font-size: 1.5em;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    border-radius: 10px;
 }
